--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.8.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -36,6 +36,8 @@ dependencies:
   simple_animations: ^1.3.3
   giffy_dialog: ^1.8.0
   firebase_auth: ^0.16.1
+  firebase_database: ^3.1.6
+  firebase_core: ^0.4.4
   flutter_instagram_image_picker: ^0.3.1
 
 dev_dependencies:
