--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,19 @@ dependencies:
   expandable_widget: ^1.0.5
   cool_nav: ^0.0.1
   page_transition: "^1.1.6"
+  toast: ^0.1.5
+  progress_dialog: ^1.2.4
   smart_select: ^4.3.2
   simple_animations: ^1.3.3
   giffy_dialog: ^1.8.0
   firebase_auth: ^0.16.1
   firebase_database: ^3.1.6
+  geolocator: ^5.3.1
+  flutter_datetime_picker: ^1.5.0
+  date_format: ^1.0.9
+  firebase_storage: ^3.0.8
+  image_picker: ^0.6.7+4
+  google_maps_flutter: ^0.5.30
   firebase_core: ^0.4.4
   flutter_instagram_image_picker: ^0.3.1
 
